Roundcube Webmail ContextMenu
=============================

 * Rework Contextmenu settings object
 * Allow skins to set Contextmenu classes
 * Remove IE8 hacks

 * Remove special handling for group-create/rename (requires roundcube rev ec98aa5)
 * "Flattened" the larry theme: fresher look by removing shadows and gradients
 * Fix handling of folder names containing special chars

Version 2.2 (2017-01-02, rc-1.3)
=================================================
 * Use new 'Mark all as read' function from core (requires 1.3)
 * Enable compact+purge actions on all folders

Version 2.1.2 (2015-04-18, rc-1.1)
=================================================
 * Fix #67 address book copy/move action not updated

Version 2.1.1 (2015-03-18, rc-1.1)
=================================================
 * Update submenu detection after 619891c

Version 2.1 (2015-01-06, rc-1.1)
=================================================
 * Add specific menu for adding contact to group
 * Update after dev-accessibility merged to RC master
 * Support multi-folder search results (66536974fe)
 * Fix possible CSRF in readfolder action
 * Add option to move/copy contacts in address book

Version 2.0 (2014-04-30, rc-1.0)
=================================================
 * Remove IE6 support
 * Remove rcm_contextmenu_register_command, use commands from toolbars
 * Remove specially created manus, generate context menu dynamically from UI
 * Much better menu generation, improve loading times

Version 1.13 (2014-02-01, rc-1.0)
=================================================
 * Add menu to contact list on compose screen (requires b3c034c)

Version 1.12 (2013-12-01, rc-1.0)
=================================================
 * Update depreciated moveto command to move
 * Update config file var names to match core

Version 1.11 (2013-05-19, rc-1.0)
=================================================
 * Add export option to address book menu
 * Add contextmenu_show JS event