@@ -4,6 +4,7 @@ Roundcube Webmail ContextMenu
  * Rework Contextmenu settings object
  * Allow skins to set Contextmenu classes
  * Remove IE8 hacks
+ * Improve menu element parsing, allow for popup menu functions in skin
 
  * Remove special handling for group-create/rename (requires roundcube rev ec98aa5)
  * "Flattened" the larry theme: fresher look by removing shadows and gradients
